unpackaged/main/default/objects/LogInterfaces__c/LogInterfaces__c.object-meta.xml
<CustomObject>
    <label>Log des interfaces</label>
    <nameField>
        <displayFormat>GF-LOG-{0000000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs des interfaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>