unpackaged/main/default/objects/LogInterfaces__c/fields/CodeRetour__c.field-meta.xml
<CustomField>
    <fullName>CodeRetour__c</fullName>
    <label>Code de retour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>