unpackaged/main/default/objects/LogInterfaces__c/fields/Flux__c.field-meta.xml
<CustomField>
    <fullName>Flux__c</fullName>
    <label>Flux</label>
    <length>255</length>
    <type>Text</type>
</CustomField>