unpackaged/main/default/objects/LogInterfaces__c/fields/IDSalesforceEnregistrement__c.field-meta.xml
<CustomField>
    <fullName>IDSalesforceEnregistrement__c</fullName>
    <label>ID Salesforce de l&#39;enregistrement</label>
    <length>18</length>
    <type>Text</type>
</CustomField>