unpackaged/main/default/objects/LogInterfaces__c/fields/LienVersEnregistrement__c.field-meta.xml
<CustomField>
    <fullName>LienVersEnregistrement__c</fullName>
    <formula>IF(ISBLANK(IDSalesforceEnregistrement__c),&#39;&#39;,LEFT($Api.Partner_Server_URL_340, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) &amp; IDSalesforceEnregistrement__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lien vers l&#39;enregistrement</label>
    <type>Text</type>
</CustomField>