unpackaged/main/default/objects/LogInterfaces__c/fields/StatutMessage__c.field-meta.xml
<CustomField>
    <fullName>StatutMessage__c</fullName>
    <label>Statut (message)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>