unpackaged/main/default/objects/LogInterfaces__c/fields/TypeObjet__c.field-meta.xml
<CustomField>
    <fullName>TypeObjet__c</fullName>
    <label>Type d&#39;objet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compte</fullName>
            </value>
            <value>
                <fullName>Opportunité</fullName>
            </value>
            <value>
                <fullName>Produit</fullName>
            </value>
            <value>
                <fullName>Proposition Commerciale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>