unpackaged/main/default/objects/LogInterfaces__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CodeRetour__c</columns>
    <columns>LienVersEnregistrement__c</columns>
    <columns>StatutMessage__c</columns>
    <columns>TypeObjet__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>